--- a/css/jquery-ui.css
+++ b/css/jquery-ui.css
@@ -874,7 +874,7 @@ body .ui-tooltip {
 .ui-widget-header .ui-state-default {
 	border: 1px solid #cccccc;
 	background: #f6f6f6 url("/images/jquery/ui-bg_glass_100_f6f6f6_1x400.png") 50% 50% repeat-x;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	color: #1c94c4;
 }
 .ui-state-default a,
@@ -891,7 +891,7 @@ body .ui-tooltip {
 .ui-widget-header .ui-state-focus {
 	border: 1px solid #fbcb09;
 	background: #fdf5ce url("/images/jquery/ui-bg_glass_100_fdf5ce_1x400.png") 50% 50% repeat-x;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	color: #c77405;
 }
 .ui-state-hover a,
@@ -910,7 +910,7 @@ body .ui-tooltip {
 .ui-widget-header .ui-state-active {
 	border: 1px solid #fbd850;
 	background: #ffffff url("/images/jquery/ui-bg_glass_65_ffffff_1x400.png") 50% 50% repeat-x;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	color: #eb8f00;
 }
 .ui-state-active a,
