--- a/css/themes/default/styles.css
+++ b/css/themes/default/styles.css
@@ -364,6 +364,7 @@ div.column-275 { width:275px; }
 div.column-480 { width:480px; }
 div.column-490 { width:490px; }
 div.column-640 { width:640px; }
+div.column-700 { width:700px; }
 
 
 /* floats */
